ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.8.0-rc3
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The maxPasses assertion (triggered on repeated allocation failure from a capped collection) can leave capped collection in non iterable state. In particular

      • the capExtent extent can be empty (contain no documents)
      • it's possible to have capExtent non null and capFirstNewRecord null, in which case the capped cursors will not work properly

      Should also investigate when the maxPasses assertion can be triggered.

                  if( ++passes > maxPasses ) {
                      log() << "passes ns:" << ns << " len:" << len << " maxPasses: " << maxPasses << '\n';
                      log() << "passes max:" << maxCappedDocs() << " nrecords:" << stats.nrecords << " datasize: " << stats.datasize << endl;
                      massert( 10345 ,  "passes >= maxPasses in capped collection alloc", false );
                  }
      

            Assignee:
            Mathias Stearn
            Reporter:
            Aaron Staple (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved: