SERVER-6981 Remove maxPasses limit and unify capped no-space errors